AquaBrain-Sem1/K8s/aquabrain-api/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquabrainapi
  namespace: aquabrain-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: aquabrainapi
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: aquabrainapi
  namespace: aquabrain-api
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`api.jdemmers.dev`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: aquabrainapi
      port: 8080
  tls:
    secretName: api.jdemmers.dev
#---
#apiVersion: autoscaling/v2
#kind: HorizontalPodAutoscaler
#metadata:
  #name: aquabrainapi
  #namespace: aquabrain-api
#spec:
  #scaleTargetRef:
    #apiVersion: apps/v1
    #kind: Deployment
    #name: aquabrainapi
  #minReplicas: 2
  #maxReplicas: 10
  #metrics:
  #- type: Resource
    #resource:
      #name: cpu
      #target:
        #type: Utilization
        #averageUtilization: 50
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aquabrainapi
  namespace: aquabrain-api
spec:
  replicas: 5
  selector:
    matchLabels:
      app: aquabrainapi
  template:
    metadata:
      labels:
        app: aquabrainapi
    spec:
      containers:
      - name: aquabrainapi
        image: ghcr.io/jasperdemmers/aquabrainapi:main
        imagePullPolicy: Always
        #resources:
          #requests:
            #cpu: 300m
            #memory: 150Mi
          #limits:
            #cpu: 600m
            #memory: 256Mi
        ports:
        - containerPort: 8080
